changed progressbar color

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -265,7 +265,7 @@ hr {
 	-webkit-transition: -webkit-transform 1s;	
 	
 
-	bottom: 20%;
+	bottom: 200px;
 	font-size:20px;
 	text-transform:uppercase; 
 	float:right;
@@ -314,8 +314,10 @@ hr {
 }
 #navProgressBar {
   height: 16px;
-  background-color: rgb(64, 180, 230);	
- /* yellow background-color: rgb(207, 255, 36);*/
+  background-color:rgb(76,76,76);
+
+  /*Blue background-color: rgb(64, 180, 230);	
+  yellow background-color: rgb(207, 255, 36);*/
   width: 0px;
   z-index: 0;
 }
@@ -346,7 +348,7 @@ hr {
 }
 
 .navTitle:hover {
-	color: rgb(64, 180, 230)
+	color: rgb(64, 180, 230);
 }
 
 .navSubTitle {
@@ -529,41 +531,11 @@ hr {
 	display:block;
 }
 
-landingTitleImage {
-	width:324px;
-	height:27px;
-	background: url("images/ReconLogo.png");
-	position:absolute;
-	top: 48px;
-	display:block;
-	
-}
-
-#landingSubTitle {
-
-	position: absolute;
-	top: 588px;
-	font-size: 42px;
-	line-height: 48px;
-	z-index:1;
-	padding-left: 25px;
-}
-
-#landingSubTitleDiv {
-	position: relative;
-	top: 588px;
-	height: 48px;
-	background-color: rgb(207,255,36);
-	z-index:0;
-	width: 3000px;
-	left:-900px;
-
-}
 
 #landingObama {
 	position: absolute;
 	top: 132px;
-	font-size: 200px;
+	font-size: 204px;
 	line-height: 156px;
 	
 	left:141px;
@@ -594,7 +566,7 @@ landingTitleImage {
 	left:110px;
 	position: absolute;
 	top: 396px;
-	font-size: 200px;
+	font-size: 204px;
 	line-height: 144px;
 	/*left:136px;*/
 	/*left:68px;*/
@@ -648,29 +620,6 @@ landingTitleImage {
 	background-color: rgb(76,76,76)!important;	
 }
 
-.landingMakingof {
-	position: static;
-	padding: 0 0 0 0;
-	left: 0px;
-	font-size: 25px;
-	line-height: 25px;
-	margin: 12px 0px 0px 0px;
-	color:rgb(200,200,200) !important;
-	 
-}
-
-.landingMakingofSubTitle {
-	position: static;
-	padding: 0 0 0 0;
-	left: 0px;
-	font-size: 20px;
-	line-height: 0px;
-	margin: 12px 0px 0px 0px;
-	color:rgb(200,200,200) !important;
-	 
-}
-
-
 .landingWhiteRule1 {
 	position: absolute;
 	border-bottom:1px dashed rgb(200,200,200)!important;
@@ -703,11 +652,70 @@ landingTitleImage {
 .landingWhiteRule3 {
 	position: absolute;
 	border-bottom:1px dashed rgb(200,200,200)!important;
-	top:541px; 
+	top:542px; 
 	left:-70px;
 	width: 496px;
 	margin: 0px 0px 0px 0px;
 }
+
+
+.landingMakingof {
+	position: static;
+	padding: 0 0 0 0;
+	left: 0px;
+	font-size: 25px;
+	line-height: 25px;
+	margin: 12px 0px 0px 0px;
+	color:rgb(200,200,200) !important;
+	 
+}
+
+.landingMakingofSubTitle {
+	position: static;
+	padding: 0 0 0 0;
+	left: 0px;
+	font-size: 20px;
+	line-height: 0px;
+	margin: 12px 0px 0px 0px;
+	color:rgb(200,200,200) !important;
+	 
+}
+
+
+/* FOOTER */
+
+
+landingTitleImage {
+	width:324px;
+	height:27px;
+	background: url("images/ReconLogo.png");
+	position:absolute;
+	top: 48px;
+	display:block;
+	
+}
+
+#landingSubTitle {
+
+	position: absolute;
+	top: 588px;
+	font-size: 42px;
+	line-height: 48px;
+	z-index:1;
+	padding-left: 25px;
+}
+
+#landingSubTitleDiv {
+	position: relative;
+	top: 588px;
+	height: 48px;
+	background-color: rgb(207,255,36);
+	z-index:0;
+	width: 3000px;
+	left:-900px;
+
+}
+
 
 #landingCreditsBox {
 	position: absolute;
@@ -730,6 +738,9 @@ landingTitleImage {
 	font-size: 14px;
 	line-height: 18px;
 }
+
+
+
 
 
 /*
