--- a/assets/css/compare.css
+++ b/assets/css/compare.css
@@ -3,7 +3,7 @@ margin-top: -156px;
 margin-left:-200px;
 margin-right:-200px;
 height:600px; 
-position:relative; 
+position:fixed; 
 
 /* Background Gradient Color */
 
