changed css for instructions

--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -22,5 +22,8 @@
 
 
 <div id="navInstructions">
-zomg these are the instructions!!!
+<div class="franklinDemiCompIt navInstructionsText">
+Explore by scrolling. <br>click on names and <br>colored words.
+</div>
+<div id="backgroundInstructions"> </div>
 </div>
