--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -381,18 +381,57 @@ hr {
 
 #navInstructions {
 	font-size: 50px;
-	background-color: yellow;
+	
+	
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	
+	
+	-webkit-transition: -webkit-transform 1s;	
+	z-index: 3500;
+}
+
+#backgroundInstructions{
+	opacity: .6;
+	background-color: rgb(255,213,0); /*rgb(207,255,36); */
 	width: 100%;
 	height: 100%;
 	position: fixed;
 	padding: 50px;
-	margin: 50px;
+	margin:-10px 50px 50px -100px;
+	z-index: 3500;
+
 	
-	-webkit-transition: -webkit-transform 1s;	
-	z-index: 5500;
+}
+.navInstructionsText{
+	
+	font-size:96px !important;
+	line-height: 120px;
+	text-transform: uppercase;
+	left: 50px;
+	position:fixed;
+	margin-top: 100px;
+	color:white;
+	z-index: 4500;
 }
 
 
+#transcriptHeading{
+	
+	left:64px;
+	top:52px;
+	width:500px;
+	font-family:"franklin-gothic-urw-comp-i7", "franklin-gothic-urw-comp"; font-weight:700; font-style:italic;
+	font-size: 96px;
+	line-height: 120px;
+	
+	color:black;
+	text-transform: uppercase;
+	z-index: 6500;
+	
+
+}
 
 /* Typekit fonts */
 
@@ -465,6 +504,7 @@ hr {
 
 .lime{ color:rgb(207,255,36); }
 .bgLime{ background-color:rgb(207,255,36); }
+
 
 .magenta{ color:rgb(227, 31, 130); } 
 .bgMagenta{ background-color:rgb(227, 31, 130); }
