--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -407,7 +407,7 @@ hr {
 
 #backgroundInstructions{
 	opacity: .6;
-	background-color: rgb(255,213,0); /*rgb(207,255,36); */
+	background-color: rgb(76,76,76); /*rgb(207,255,36); rgb(255,213,0)*/
 	width: 100%;
 	height: 100%;
 	position: fixed;
