added parallax to quotes and traits

--- a/app/templates/overlays/quotes.html
+++ b/app/templates/overlays/quotes.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="franklinDemiComp quoteLeftQuote quotesClick" style="left: -200px; top: <%= anchor.top - 200 %>px">&ldquo;</div>
-  <div class="franklinExBookComp quotePhrase quotesClick" style="left: <%= speaker == 'obama' ? '-1000px' : '2048px' %>; top: <%= posY %>px"><%= phrase %></div>
-  <div class="franklinDemiComp quoteRightQuote quotesClick" style="left: 2048px; top: <%= anchor.top - 150 %>px">&rdquo;</div>
+  <div class="franklinDemiComp quoteLeftQuote quotesClick" style="left: -200px; top: <%= anchor.top - 200 %>px" data-top-bottom="margin-top:-160px;" data-bottom-top="margin-top:160px;">&ldquo;</div>
+  <div class="franklinExBookComp quotePhrase quotesClick" style="left: <%= speaker == 'obama' ? '-1000px' : '2048px' %>; top: <%= posY %>px" data-top-bottom="margin-top:-120px;" data-bottom-top="margin-top:120px;"><%= phrase %></div>
+  <div class="franklinDemiComp quoteRightQuote quotesClick" style="left: 2048px; top: <%= anchor.top - 150 %>px" data-top-bottom="margin-top:-160px;" data-bottom-top="margin-top:160px;">&rdquo;</div>
 </div> 
