started workign on buffering messages and transcript speed

--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -15,6 +15,7 @@
 
 <div id="navRight">
 	<div id="navModeButtons">
+	  <div id="navPlaybackButton" class="franklinDemiComp navButton gray60"> 1x </div>
 	  <div id="navTranscriptButton" class="franklinDemiComp navButton gray60"> transcript </div>
 	  <div id="navComparisonButton" class="franklinDemiComp navButton gray60"> stats </div>
 	</div>
