--- a/app/templates/overlays/category.html
+++ b/app/templates/overlays/category.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="catWrapper">
-  	<div class="franklinDemiCompIt push-1 <%= category %>Markup reverse categoryOverlay"><%= title %></div>
-  	<div class="franklinDemiCompIt push-1 <%= category %>Markup reverse categoryOverlay overlay-bottom">Language</div>
+  	<div class="franklinDemiCompIt push-0 categoryOverlay" style="top:144px;"><p class="categoryOverlayText <%= category %>Markup reverse"><%= title %></p></div>
+  	<div class="franklinDemiCompIt push-0 categoryOverlay" style="top:236px;"><p class="categoryOverlayText <%= category %>Markup reverse">Language</p></div>
   <div class="catWrapper">
 </div> 
