--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -886,19 +886,29 @@ landingTitleImage {
 
 .categoryOverlay {
 	position:absolute; 
-	overflow: visible;
-  /*width: 906px;*/
-  font-size: 180px;
-  line-height: 160px;
-	margin: 0px 0px 0px 0px;
-	padding: 0px 20px 0px 10px;
-  color: rgb(255,255,255);
-	/*-webkit-transition: left 1s, right 1s, top 1s, height 1s, font-size 1s, line-height 1s;
-	-webkit-transform: translateZ(0px);	*/
+	overflow: hidden;
+  height: 80px; 
   z-index: 7000;
-  text-transform: uppercase;
-  -webkit-transition: left 1s;
 }
+
+.categoryOverlayText {
+	position: relative;
+	top: 90px;
+	font-size: 90px; 
+  line-height: 80px; 
+  margin: 0px 0px 0px 0px;
+	padding: 0px 20px 0px 10px;
+  color: rgb(255,255,255);	
+  text-transform: uppercase;
+	
+	-webkit-transition: top 1s;
+}
+
+/*
+.overlay-bottom {
+	top: 175px;
+}
+*/
 
 .certainMarkup:hover{
 	background-color: rgb(255,255,255) !important;
@@ -999,10 +1009,6 @@ landingTitleImage {
 	color: rgb(255,255,255) !important;
 }
 
-.overlay-bottom {
-	position:absolute;
-	top: 175px;
-}
 
 /* Word count overlays */
 
