--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,5 +1,10 @@
 <div id="landingWrapper" class="container">
-	<span id="landingBigWords">government</br>education</br>opposition</br>election</span>
+  <span id="landingBigWords">
+    <span class="bigWord">government</span>
+    <span class="bigWord">education</span>
+    <span class="bigWord">opposition</span>
+    <span class="bigWord">election</span>
+  </span>
 <a> <img src="images/ReconLogo.png" class="push-0" style="position:absolute; top:48px;"/></a>
 	<!--<span id="landingTitle" class="franklinDemiCompIt push-0">ReConstitution2012</span> -->
 
