changed backgroundedited some styles

--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -22,7 +22,7 @@
 </div>
 
 
-<div id="navInstructions">
+<div id="navInstructions" class="push-0">
 <div class="franklinDemiCompIt navInstructionsText">
 Explore by scrolling. <br>click on names and <br>colored words.
 </div>
