click tweaks and fixed instruct rect

--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -15,9 +15,9 @@
 
 <div id="navRight">
 	<div id="navModeButtons">
-	  <div id="navPlaybackButton" class="franklinDemiComp navButton gray60"> 1x </div>
-	  <div id="navTranscriptButton" class="franklinDemiComp navButton gray60"> transcript </div>
-	  <div id="navComparisonButton" class="franklinDemiComp navButton gray60"> stats </div>
+	  <div id="navPlaybackButton" class="franklinDemiComp navButton gray60 active"> 1x </div>
+	  <div id="navTranscriptButton" class="franklinDemiComp navButton gray60 inactive"> transcript </div>
+	  <div id="navComparisonButton" class="franklinDemiComp navButton gray60 active"> stats </div>
 	</div>
 </div>
 
