--- a/app/templates/overlays/numbers.html
+++ b/app/templates/overlays/numbers.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<% if(speaker==1) { // Obama %>
-    <div class="franklinExBookComp numberPhrase gray80 numbersClick" style="left: -1024px; top:<%= posY %>px;" data-top-bottom="margin-left[quadratic]:200px; margin-top:-60px;" data-200-top-top="margin-left[quadratic]:0px;" data-bottom-top="margin-top:60px;" ><%=$.trim(phrase)%></div>
+    <div class="franklinExBookComp numberPhrase gray80 numbersClick" style="left: -1024px; top:<%= posY %>px;" data-top-bottom="margin-top:-60px;" data-bottom-top="margin-top:60px;" ><%=$.trim(phrase)%></div>
 	<% }else{ %>
-    <div class="franklinExBookComp numberPhrase gray80 numbersClick" style="left: 2048px; text-align: right; top:<%= posY %>px;" data-top-bottom=" margin-left[quadratic]:-200px; margin-top:-60px;" data-200-top-top="margin-left[quadratic]:0px;" data-bottom-top="margin-top:60px;"><%=$.trim(phrase)%></div> 
+    <div class="franklinExBookComp numberPhrase gray80 numbersClick" style="left: 2048px; text-align: right; top:<%= posY %>px;" data-top-bottom="margin-top:-60px;" data-bottom-top="margin-top:60px;"><%=$.trim(phrase)%></div> 
 	<% } %>
 </div>
