--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -9,7 +9,7 @@
 		<span class="franklinBook navSubTitle gray60">|</span>
 		<span class="franklinBook navSubTitle gray60" id="navDate"><!--October 3, 2012--></span>
 		<span class="franklinBook navSubTitle gray60">|</span>
-		<span class="franklinMed navSubTitle sky" id="navTime">9:14 PM</span>
+		<span class="franklinMed navSubTitle cherry" id="navTime">9:14 PM</span>
 	</div>
 </div>
 
