fixed cat overlay close

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -407,7 +407,7 @@ hr {
 	line-height: 120px;
 	padding-bottom:50px;
 	
-	color:black;
+	color:rgb(60,60,60);
 	text-transform: uppercase;
 	z-index: 6500;
 	
