--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -481,12 +481,14 @@ hr {
 .pink{ color:rgb(231,0,149); }
 .bgPink{ background-color:rgb(231,0,149); }
 
-.sky{ color:rgb(64,180,229); }
-.bgSky{ background-color:rgb(64,180,229); }
+.sky{ color:rgb(64,180,230); }
+.bgSky{ background-color:rgb(64,180,230); }
 
-.lime{ color:rgb(207,255,36); }
-.bgLime{ background-color:rgb(207,255,36); }
+.lime{ color:rgb(35,255,49); }
+.bgLime{ background-color:rgb(35,255,49); }
 
+.yellow{ color:rgb(255, 239,54); }
+.bgYellow{ background-color:rgb(255, 239,54); }
 
 .magenta{ color:rgb(227, 31, 130); } 
 .bgMagenta{ background-color:rgb(227, 31, 130); }
@@ -501,8 +503,9 @@ hr {
 .bgSalmon{ background-color:rgb(255,157,108); }
 
 .seaGreen{ color:rgb(124,240,179); }
-.orangeRed{ color:rgb(255, 85, 46); }
-.bgOrangeRed{ background-color:rgb(255, 85, 46); }
+
+.orangeRed{ color:rgb(255, 85, 57); }
+.bgOrangeRed{ background-color:rgb(255, 85, 57); }
 
 .angry{color:rgb(255,67,55);}
 .bgAngry{background-color:rgb(255,67,55);}
