fixed instruction layout

--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -23,8 +23,10 @@
 
 
 <div id="navInstructions">
-<div class="franklinDemiCompIt navInstructionsText">
-Explore by scrolling. <br>click on names and <br>colored words.
+<div class="container">
+	<div class="franklinDemiCompIt navInstructionsText push-0">
+	You scroll & click.<br> They expose their<br>hidden secrets.
+	</div>
 </div>
 <div id="backgroundInstructions"> </div>
 </div>
