navRight button color

--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -15,9 +15,9 @@
 
 <div id="navRight">
 	<div id="navModeButtons">
-	  <div id="navPlaybackButton" class="franklinDemiComp navButton gray60"> 1x </div>
-	  <div id="navTranscriptButton" class="franklinDemiComp navButton gray60"> TRANSCRIPT </div>
-	  <div id="navComparisonButton" class="franklinDemiComp navButton gray60"> STATS </div>
+	  <div id="navPlaybackButton" class="franklinDemiComp navButton cherry"> 1x </div>
+	  <div id="navTranscriptButton" class="franklinDemiComp navButton cherry"> TRANSCRIPT </div>
+	  <div id="navComparisonButton" class="franklinDemiComp navButton cherry"> STATS </div>
 	</div>
 </div>
 
