--- a/app/templates/overlays/trait.html
+++ b/app/templates/overlays/trait.html
@@ -1,4 +1,4 @@
-<div class="container" data-top-bottom="margin-top:-120px;" data-bottom-top="margin-top:120px;">
+<div class="container">
 
 <% if(speaker=="obama") { %>
 
@@ -15,5 +15,5 @@
 	<div class="franklinDemiComp traitSymbolRight orangeRed traitClick" style="top:<%= startPosY %>px;" data-top-bottom="margin-top:-400px;" data-bottom-top="margin-top:400px;"><%= aVal %></div>
 
 <% } %>
-<!-- <p class="underlay"> </p> -->	
+
 </div>
